Criado menu de contexto para a view de turmas, ao pressionar um registro na listView será fornecido um menu com opções: Novo Registro, Editar, Remover.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,12 @@
     <string name="app_name">Class Diary</string>
 
     <string name="class_diary">Bem Vindo ao Class Diary!</string>
-    <string name="action_settings">Opções</string>
+    <string name="action_settings">Configurações</string>
     <string name="main_text">Controle de Frequencia</string>
     <string name="title_activity_turma">TurmaActivity</string>
     <string name="turma_text">Manutenção de Turmas</string>
-
     <string name="hello_world">Hello world!</string>
+    <string name="remover">Remover</string>
+    <string name="novo">Novo Registro</string>
+    <string name="editar">Editar</string>
 </resources>
